--- a/sass/gdk.scss
+++ b/sass/gdk.scss
@@ -141,15 +141,6 @@ hr {
     font-size: 5rem;
 }
 
-.sidebar {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 2em;
-    align-self: start;
-    border-right: 2px solid $color-neutral;
-    padding-right: 2em;
-}
-
 .toc {
     margin: 0;
     padding: 0;
